add javadoc. Project settings error fixed.